# NEXUS_AI

./: .env.example  .gitignore  .kilocodemodes  BETTING_SPORTS_ANALYSIS.md  CHANGELOG.md  CUTTING_EDGE_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_REPORT.md  ML_RESEARCH_IMPLEMENTATION.md  NEXUS_AI_Lite_Specyfikacja.md  NEXUS_AI_v2_Pelna_Implementacja.md  PRODUCTION_DEPLOYMENT_REPORT.md  README.md  ROADMAP.md  SCORE_NETWORK_DATA_REPORT.md  TRAINING_REPORT.md  app.py  betting_floor.py  docker-compose.yml  main.py  nexus.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sport_datasets_AI_report.md
.claude/: settings.local.json
agents/: __init__.py  analyst.py  bettor.py  data_evaluator.py  decision_maker.py  news_analyst.py  ranker.py  risk_manager.py  statistical_model_agent.py  supervisor.py
agents/sports_data_swarm/: README.md  __init__.py  base_agent.py  baseball_agent.py  cricket_agent.py  data_acquisition_agent.py  data_augmentation_agent.py  demo.py  esports_agent.py  evaluator_agents.py  football_agent.py  football_evaluator.py  formatting_agent.py  golf_agent.py  hockey_agent.py  manager_agent.py  mma_agent.py  rugby_agent.py  run_collection.py  sport_agents.py  storage_agent.py  table_tennis_agent.py  test_swarm.py
api/: __init__.py  main.py  metrics.py  routers.py
clerk-react/: package-lock.json
config/: free_apis.py  leagues.py  llm_config.py  optimal_ensemble_weights.json  production_v3.json  settings.py  settings_secure.py  thresholds.py
core/: __init__.py  ensemble.py  error_handler.py  integration.py  monitoring.py  quality_scorer.py  state.py  value_calculator.py
core/data/: enums.py  validators.py
core/datasets/: __init__.py  base.py  baseball_data.py  basketball_data.py  handball_data.py  hockey_data.py  manager.py  tennis_data.py
core/llm/: __init__.py  hybrid_predictor.py  injury_extractor.py  kimi_client.py  match_analyzer.py
core/ml/: __init__.py  cutting_edge_integration.py
core/models/: __init__.py  base_model.py  basketball_model.py  greyhound_model.py  handball_model.py  handicap_model.py  table_tennis_model.py  tennis_model.py
data/ab_tests/: predictions_2026-01.jsonl  test_results.jsonl
data/apis/: __init__.py  api_tier_manager.py  baseball_scraper.py  premium_api_clients.py  sports_api_client.py  thesportsdb_client.py
data/basketball/: __init__.py  bets_api_client.py  euroleague_scraper.py
data/collectors/: __init__.py  fixture_collector.py  historical_collector.py  results.py
data/feedback/: feedback_collection.json
data/historical/: basketball_NBA_20240606_20260127.json  collection_metadata.json  football_Bundesliga_20250127_20260127.json  football_LaLiga_20250127_20260127.json  football_Ligue1_20250127_20260127.json  football_PL_20250127_20260127.json  football_PL_20251228_20260127.json  football_SerieA_20250127_20260127.json
data/news/: __init__.py  aggregator.py  injury_extractor.py  validator.py
data/odds/: __init__.py  odds_api_client.py  odds_merger.py  pl_scraper.py
data/score_network/: summary.json
data/scrapers/: __init__.py  flashscore_scraper.py
data/sports/: score_network_metadata.json
data/tennis/: __init__.py  api_tennis_client.py  sofascore_scraper.py
database/: crud.py  db.py  models.py
evaluator/: __init__.py  freshness_checker.py  source_agreement.py  web_evaluator.py
frontend/app/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
mcp_servers/: __init__.py  alerts_server.py  basketball_server.py  evaluation_server.py  news_server.py  odds_server.py  tennis_server.py
models/: goals_model.json  handicap_model.json  training_metadata.json
models/score_network/: training_summary.json
models/trained/: gradient_boosting_20260128_145231.pkl  gradient_boosting_20260128_150513.pkl  metadata_20260128_145231.json  metadata_20260128_150513.json  mlp_20260128_145231.pkl  mlp_20260128_150513.pkl
monitoring/: prometheus.yml
plans/: 01_architektura.md  02_struktura.md  03_konfiguracja.md  04_warstwa_danych_news.md  05_agent_ewaluujacy.md  06_mcp_servers.md  07_modele_predykcji.md  08_ranking_top3.md  09_interfejs_gradio.md  10_glowna_petla.md  11_deployment.md  IMPLEMENTACJA_STATUS.md
plans/lite/: lite_01_zalozenia.md  lite_02_architektura.md  lite_03_zrodla_danych.md  lite_04_struktura.md  lite_05_warstwy_danych.md  lite_06_ewaluator.md  lite_07_predykcja.md  lite_08_raporty.md  lite_09_interfejs.md  lite_10_uruchomienie.md
reports/: __init__.py  report_generator.py  sports_apis_research.md
reports/templates/: report_template.html  report_template.md
scripts/: __init__.py  backtest.py  collect_and_train.py  collect_historical.py  download_scorenetwork_data.py  full_production_pipeline.py  init_db.py  integrate_score_network_to_nexus.py  organize_and_train_score_data.py  organize_score_network_data.py  prepare_and_train_models.py  run_ab_testing.py  run_daily.py  run_tests.sh  setup_mcp.py  start_dev.sh  start_prod.sh  test_api_connections.py  test_api_tiers.py  train_initial_models.py  train_models.py  train_models_fast.py  train_score_network_models.py
tests/: conftest.py  test_agents.py  test_api_endpoints.py  test_data.py  test_models.py  test_new_sports_models.py  test_websocket.py
tests/integration/: __init__.py  test_ml_api.py
tests/unit/: __init__.py  test_accuracy_tracker.py  test_data_repository.py  test_data_schemas.py  test_ensemble_integration.py  test_feature_extractors.py  test_feature_pipeline.py  (+7 more)
(+170 files in other folders)
