# pyproject.toml
# NEXUS AI v2.2.0 - Project Configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai"
version = "2.2.0"
description = "AI-powered sports prediction and value betting system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NEXUS AI Team"}
]
keywords = ["sports", "betting", "prediction", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Data & ML
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    
    # AI/LLM
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.2.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    
    # HTTP & APIs
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    
    # Scraping
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Monitoring
    "prometheus-client>=0.19.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
frontend = [
    "npm>=10.0.0",
]

[project.scripts]
nexus = "nexus:main"

[project.urls]
Homepage = "https://github.com/nexus-ai/sports-prediction"
Repository = "https://github.com/nexus-ai/sports-prediction"
Issues = "https://github.com/nexus-ai/sports-prediction/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/\.git
|\.hg
|\.mypy_cache
|\.tox
|\.venv
|_build
|build
|dist
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "venv", "build", "dist"]
known_first_party = ["nexus", "api", "agents", "core", "data", "config"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, E501"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py: F401",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.mypy.config_files]
mypy.ini

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*", "api*", "agents*", "core*", "data*", "config*", "scripts*"]
